--- a/CiscoDevNetCreate2019/Python_Basics_06_-_Sequences.ipynb
+++ b/CiscoDevNetCreate2019/Python_Basics_06_-_Sequences.ipynb
@@ -22,8 +22,20 @@
     "- list\n",
     "- tuple\n",
     "- range\n",
-    "- string\n",
-    "\n",
+    "- string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='https://github.com/ProsperousHeart/Personal-Projects/blob/master/CiscoDevNetCreate2019/IMGs/sequence_numbering.jpg?raw=true'></img>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# What Can You Do With Sequences?\n",
     "\n",
     "Most sequence types can do the following:\n",
@@ -39,13 +51,6 @@
     "\n",
     "When you begin learning more advanced programming options, you can even create your own!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -64,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
