--- a/CiscoDevNetCreate2019/Python_Basics_06_-_Sequences.ipynb
+++ b/CiscoDevNetCreate2019/Python_Basics_06_-_Sequences.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='https://github.com/ProsperousHeart/Personal-Projects/blob/master/CiscoDevNetCreate2019/IMGs/sequence_numbering.jpg?raw=true'></img>"
+    "<img src='https://github.com/ProsperousHeart/Training-Events/blob/master/CiscoDevNetCreate2019/IMGs/sequence_numbering.png?raw=true'></img>"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
